# megaminx_34_56_phases_reduction

./: .dockerignore  .gitignore  LICENSE-CODE.txt  Makefile  NOTICE.md  README.md  pyproject.toml  requirements-proof.txt  requirements-training.txt
config/: project.json
controls/: published_histograms.json
docs/: artifact-formats.md  metric.md  phase-definitions.md  proof.md  state-format.md  symmetry-analysis.md  threat-model.md  training-pair34.md  training-pair56.md
environment/: Dockerfile  build.sh  build_table_builder.sh  build_verifier.sh  fetch_upstream.sh  versions.txt
paper/: author.tex  main.tex  references.bib  related_work_notes.md
phase_3_4/: README.md
phase_5_6/: README.md
schemas/: certificate-manifest.schema.json  job-manifest.schema.json  table-metadata.schema.json
scripts/: analyze_equivalences  apply  audit_phase_groups  audit_publication_tree.py  build_pair34_problem  build_pair56_problem  build_paper.sh  build_tables  canonicalize  certify  check_disk  compose_pairs  extract_antipodes  generate_publication_figures.py  make_state  phase_index  pretraining_gate  rebind_checkpoint_provenance.py  reproduce_pair  run_job  run_pair34_beam_cascade  run_publication_cascade  sanitize_checkpoint_metadata.py  solve  test_pair34  test_pair56  train  train_pair34  train_pair56  unpack_publication_certificate.py  verify  verify_compositions  verify_hard_states  verify_pair34_solutions  verify_pair56_solutions  verify_publication_artifacts.py  verify_reductions
tests/: test_artifacts.py  test_cli.py  test_config.py  test_go_bulk_verify.py  (+7 more)
(+64 files in other folders)
