[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "megaminx-34-56-phases-reduction"
version = "0.1.0"
description = "Computational certificates for the Megaminx 3+4 and 5+6 phase reductions"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mdr = "mdr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
